index un css izveide

--- a/Class_03_20220516/Majasdarbs.html
+++ b/Class_03_20220516/Majasdarbs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Pirmā tabula</title>
     <!--
         
     border-left un right 50x padarija rāmja malas neredzamas.
