--- a/Class_04_20220523/Chess/chess.html
+++ b/Class_04_20220523/Chess/chess.html
@@ -4,13 +4,11 @@
 <link rel="stylesheet" href="style2.css"/>
 
 </head>
-
-
 <body>
-<h1>The Chess</h1>
 <table class="First">
+    <caption>The Chess</caption>
     <tr>
-        <th>Blank</th>
+        <th> </th>
         <th>A</th>
         <th>B</th>
         <th>C</th>
@@ -19,119 +17,107 @@
         <th>F</th>
         <th>G</th>
         <th>H</th>
-        <th>Blank</th>
+        <th> </th>
 
     </tr>
     <tr>
-        <th>1</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>1</th>
-    </tr>
-    <tr>
-        <th>2</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>2</th>
-    </tr>
-    <tr>
-        <th>3</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>3</th>
-    </tr>
-    <tr>
-        <th>4</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>4</th>
-    </tr>
-    <tr>
-        <th>5</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>5</th>
-    </tr>
-    <tr>
-        <th>6</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>6</th>
+        <th>8</th>
+        <th>&#9820</th>
+        <th class="Col">&#9821</th>
+        <th>&#9822</th>
+        <th class="Col">&#9819</th>
+        <th>&#9818</th>
+        <th class="Col">&#9822</th>
+        <th>&#9821</th>
+        <th class="Col">&#9820</th>
+        <th>8</th>
     </tr>
     <tr>
         <th>7</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
+        <th class="Col">&#9823</th>
+        <th>&#9823</th>
+        <th class="Col">&#9823</th>
+        <th>&#9823</th>
+        <th class="Col">&#9823</th>
+        <th>&#9823</th>
+        <th class="Col">&#9823</th>
+        <th>&#9823</th>
         <th>7</th>
     </tr>
     <tr>
-        <th>8</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>8</th>
+        <th>6</th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th>6</th>
     </tr>
     <tr>
-        <th>8</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>Blank</th>
-        <th>8</th>
+        <th>5</th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th>5</th>
     </tr>
     <tr>
-        <th>Blank</th>
+        <th>4</th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th></th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th>4</th>
+    </tr>
+    <tr>
+        <th>3</th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th class="Col"> </th>
+        <th> </th>
+        <th>3</th>
+    </tr>
+    <tr>
+        <th>2</th>
+        <th>&#9817</th>
+        <th class="Col">&#9817</th>
+        <th>&#9817</th>
+        <th class="Col">&#9817</th>
+        <th>&#9817</th>
+        <th class="Col">&#9817</th>
+        <th>&#9817</th>
+        <th class="Col">&#9817</th>
+        <th>2</th>
+    </tr>
+    <tr>
+        <th>1</th>
+        <th class="Col">&#9814</th>
+        <th>&#9816</th>
+        <th class="Col">&#9815</th>
+        <th>&#9813</th>
+        <th class="Col">&#9812</th>
+        <th>&#9815</th>
+        <th class="Col">&#9816</th>
+        <th>&#9814</th>
+        <th>1</th>
+    </tr>
+    <tr class="Sani">
+        <th> </th>
         <th>A</th>
         <th>B</th>
         <th>C</th>
@@ -140,8 +126,7 @@
         <th>F</th>
         <th>G</th>
         <th>H</th>
-        <th>Blank</th>
-
+        <th> </th>
     </tr>
 </table>
 
