--- a/Class_04_20220523/cv.html
+++ b/Class_04_20220523/cv.html
@@ -8,31 +8,31 @@
 
 <body>
     
-    <table>
+    <table class="me">
         <tr>
             <td colspan="2" rowspan="3"><img src="../images/cv_photo.jpg" alt="Es" width="250" ></td>
-            <td class="Name">Pamelo Hose Gardetino</td>
+            <td class="Name" style="text-align:center">Pamelo Hose Gardetino</td>
         </tr>
         <tr>
-            <td class="mazie"> Date of birth: 21/05/1987 | Nationality: Poland | Currently living: Paris/France </td>
+            <td class="mazie" style="text-align:center"> Date of birth: 21/05/1987 | Nationality: Poland | Currently living: Paris/France </td>
         </tr>
         <tr>
-            <td> īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts īss aprakts </td>
+            <td style="padding:10px">Art Lecturer with 10+ years of experience in facilitating learning in the fine arts focusing on contemporary artists who use digital media as a tool for photographic practice. Specialist in the communication of visual ideas through computer, digital camera and hybrid practice with a basis in photography as a medium for creating art. Active, exhibiting artist with portfolio of work available upon request.</tr>
+        <tr>
+            <td class="kontakti">(+372) 891254554</td>
         </tr>
         <tr>
-            <td align="center"> (+372) 891254554 </td>
+            <td class="kontakti">pamelo.hose@gmail.com</td>
         </tr>
-        <tr>
-            <td align="center">pamelo.hose@gmail.com </td>
-        </tr>
-    </table>
+            </table>
 <br>
+
 <br>
 <!-- Darba pieredze -->
     <table class="Work">
-
         <tr>
-            <td class="Work" > <b>Working experience</b> </td>
+            <td class="Work" ><img src="../images/settings.png" alt="Ceļojums" style="width:20px;height:18px;"> <b>Working experience</b> </td>
+            <td rowspan="10"><img src="https://www.lma.lv/uploads/news/3185/shunya-koide-1emwndldhs0-unsplash.jpg" alt="art" width="300"></td>
         </tr>
         
         <!-- Pirmais darbs -->
@@ -45,10 +45,10 @@
         <tr>
             <td>
             <ul>
-                <li>Mākslas kritika</li>
-                <li>Māklsas priekšmetu kopšana</li>
-                <li>Gleznu novērtēšana</li>
-                <li>15gs.-18gs. Vēstures publikāciju sagatavošana</li>
+                <li>Art criticism</li>
+                <li>Care of works of art</li>
+                <li>Evaluation of paintings in the 15th-18th centuries.</li>
+                <li>Preparation of historical publications</li>
             </ul>
             </td>
         </tr>
@@ -62,23 +62,41 @@
         <tr>
             <td>
             <ul>
-                <li>Reconstruct the evolution</li>
+                <li>Reconstruct the art evolution</li>
                 <li>Publication of results in scientific journals</li>
                 <li>Presentation of results at scientific conferences</li>
             </ul>
             </td>
         </tr>
-    </table>
-<!-- Skolas -->
-    <table class="School">
+        <!-- Otrais darbs -->
         <tr>
-            <td class="Work" > <b>Education</b> </td>
+            <td class="mazie">- 2015/02 - 2020/03 / France - Paris </td>
         </tr>
         <tr>
-            <td class="school">- 2003 - 2005 / Latvia </td>
-            <td class="school">- 2005 - 2006 / Netherland </td>
-            <td class="school">- 2006 - 2007 / Germany </td>
-            <td class="school">- 2007 - 2008 / France </td>
+            <td><b>Musée du Louvre</b></td>
+        </tr>
+        <tr>
+            <td>
+            <ul>
+                <li>Data Analyst</li>
+                <li>Documentary and Editorial Resources Service</li>
+                <li>Publication of history results for journals</li>
+            </ul>
+            </td>
+        </tr>
+        </table>
+<!-- Skolas -->
+<br>
+
+    <table class="School">
+        <tr>
+            <td class="Work" > <b><img src="../images/graduation-cap.png" alt="Skolas" style="width:20px;height:18px;"> Education</b> </td>
+        </tr>
+        <tr>
+            <td class="school"> 2003 - 2005 / Latvia </td>
+            <td class="school"> 2005 - 2006 / Netherland </td>
+            <td class="school"> 2006 - 2007 / Germany </td>
+            <td class="school"> 2007 - 2008 / France </td>
         </tr>
         <tr>
             <th>Latvijas Mākslas Akadēmija</th>
@@ -104,8 +122,72 @@
             <td>Stilu teorija</td>
             <td>Austrumu mākslas vēsture</td>
         </tr>
-
+<br>
     </table>
    
+<!-- iemaņās -->
+<table class="pro">
+    <br>
+    <br>
+    <td class="Work" colspan="6" style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)"> <b><img src="../images/book-alt.png" alt="Skolas" style="width:20px;height:18px;"> Language</b> </td>
+    <td class="Work" colspan="6" style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)"><b><img src="../images/list-check.png" alt="Skolas" style="width:20px;height:18px;"> Computer skills</b> </td>
+    <tr>
+    <th> </th>
+    <th>Latviešu</th>
+    <th>Deutsch</th>
+    <th>Français</th>
+    <th>Polski</th>
+    <th>English</th>
+    <td></td>
+    <th>Programm</th>
+    <th>LVL</th>
+    <td></td>
+    <th>Software</th>
+    <th>LVL</th>
+</tr>
+<tr>
+    <th>Lasīt</th>
+    <td>C2</td>
+    <td>C2</td>
+    <td>C2</td>
+    <td>C2</td>
+    <td>C2</td>
+    <td style=" background-color: #494949"></td>
+    <td>Photoshop</td>
+    <td>Pro</td>
+    <td style=" background-color: #494949"></td>
+    <td>MS Windows</td>
+    <td>Pro</td>
+</tr>
+<tr>
+    <th>Runāt</th>
+    <td>C2</td>
+    <td>C2</td>
+    <td>C2</td>
+    <td>C2</td>
+    <td>C2</td>
+    <td style=" background-color: #494949"></td>
+    <td>MS Office</td>
+    <td>Expert</td>
+    <td style=" background-color: #494949"></td>
+    <td>MacOs</td>
+    <td>Pro</td>
+</tr>
+    <th>Rakstī</th>
+    <td>C2</td>
+    <td>C2</td>
+    <td>C2</td>
+    <td>C2</td>
+    <td>C2</td>
+    <td style=" background-color: #494949"></td>
+    <td>Visual Studio</td>
+    <td>Beginner</td>
+    <td style=" background-color: #494949"></td>
+    <td>Linux</td>
+    <td>Pro</td>
+
+</table>
+<br>
+<br>
 </body>
 </html>
