CV formatēšana, papildināšana

--- a/Class_04_20220523/cv.html
+++ b/Class_04_20220523/cv.html
@@ -130,7 +130,7 @@
     <br>
     <br>
     <td class="Work" colspan="6" style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)"> <b><img src="../images/book-alt.png" alt="Skolas" style="width:20px;height:18px;"> Language</b> </td>
-    <td class="Work" colspan="6" style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)"><b><img src="../images/list-check.png" alt="Skolas" style="width:20px;height:18px;"> Computer skills</b> </td>
+
     <tr>
     <th> </th>
     <th>Latviešu</th>
@@ -138,12 +138,7 @@
     <th>Français</th>
     <th>Polski</th>
     <th>English</th>
-    <td></td>
-    <th>Programm</th>
-    <th>LVL</th>
-    <td></td>
-    <th>Software</th>
-    <th>LVL</th>
+    
 </tr>
 <tr>
     <th>Lasīt</th>
@@ -151,13 +146,7 @@
     <td>C2</td>
     <td>C2</td>
     <td>C2</td>
-    <td>C2</td>
-    <td style=" background-color: #494949"></td>
-    <td>Photoshop</td>
-    <td>Pro</td>
-    <td style=" background-color: #494949"></td>
-    <td>MS Windows</td>
-    <td>Pro</td>
+    <td>C2</td> 
 </tr>
 <tr>
     <th>Runāt</th>
@@ -166,12 +155,6 @@
     <td>C2</td>
     <td>C2</td>
     <td>C2</td>
-    <td style=" background-color: #494949"></td>
-    <td>MS Office</td>
-    <td>Expert</td>
-    <td style=" background-color: #494949"></td>
-    <td>MacOs</td>
-    <td>Pro</td>
 </tr>
     <th>Rakstī</th>
     <td>C2</td>
@@ -179,14 +162,42 @@
     <td>C2</td>
     <td>C2</td>
     <td>C2</td>
-    <td style=" background-color: #494949"></td>
+<tr>
+    <td colspan="8" style="font-size:12">Levels: A1 / A2: Basic Level - B1 / B2: Intermediate - C1 / C2: Advanced</td>
+</tr>
+<tr><td styule="height:100px"><br></td></tr>
+
+<tr>
+    <td class="Work" colspan="6" style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)"><b><img src="../images/list-check.png" alt="Skolas" style="width:20px;height:18px;"> Computer skills</b> </td>
+</tr>
+<tr>
+    <th>Programm</th>
+    <th>LVL</th>
+    <td></td>
+    <th>Software</th>
+    <th>LVL</th>
+</tr>
+    <td>Photoshop</td>
+    <td>Pro</td>
+    <td></td>
+    <td>MS Windows</td>
+    <td>Pro</td>
+</tr>
+<tr>
+    <td>MS Office</td>
+    <td>Expert</td>
+    <td></td>
+    <td>MacOs</td>
+    <td>Pro</td></tr>
+<tr>
     <td>Visual Studio</td>
     <td>Beginner</td>
-    <td style=" background-color: #494949"></td>
+    <td></td>
     <td>Linux</td>
     <td>Pro</td>
-
+</tr>
 </table>
+
 <br>
 <br>
 </body>
