CV html un css optimizēšana

--- a/Class_04_20220523/cv.html
+++ b/Class_04_20220523/cv.html
@@ -105,22 +105,22 @@
             <th>Ecole Nationale Supérieure Beaux-Arts de Paris</th>
         </tr>
         <tr>
-            <td>Gleznošana</td>
-            <td>Mākslas vēsture</td>
-            <td>Kompozīcija</td>
-            <td>Kultūras vēsture</td>
+            <td class="school1"><li>Gleznošana</li></td>
+            <td class="school1"><li>Mākslas vēsture</li></td>
+            <td class="school1"><li>Kompozīcija</li></td>
+            <td class="school1"><li>Kultūras vēsture</li></td>
         </tr>
         <tr>
-            <td>Glezniecības tehnoloģija</td>
-            <td>Filozofijas vēsture</td>
-            <td>Anatomija</td>
-            <td>Rietumu mākslas vēsture</td>
+            <td class="school1"><li>Glezniecības tehnoloģija</li></td>
+            <td class="school1"><li>Filozofijas vēsture</li></td>
+            <td class="school1"><li>Anatomija</li></td>
+            <td class="school1"><li>Rietumu mākslas vēsture</li></td>
         </tr>
         <tr>
-            <td>Zīmēšana</td>
-            <td>Tuvo reģionu mākslas vēsture</td>
-            <td>Stilu teorija</td>
-            <td>Austrumu mākslas vēsture</td>
+            <td class="school1"><li>Zīmēšana</li></td>
+            <td class="school1"><li>Tuvo reģionu mākslas vēsture</li></td>
+            <td class="school1"><li>Stilu teorija</li></td>
+            <td class="school1"><li>Austrumu mākslas vēsture</li></td>
         </tr>
 <br>
     </table>
@@ -132,12 +132,12 @@
     <td class="Work" colspan="6" style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)"> <b><img src="../images/book-alt.png" alt="Skolas" style="width:20px;height:18px;"> Language</b> </td>
 
     <tr>
-    <th> </th>
-    <th>Latviešu</th>
-    <th>Deutsch</th>
-    <th>Français</th>
-    <th>Polski</th>
-    <th>English</th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)"> </th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)">Latviešu</th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)">Deutsch</th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)">Français</th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)">Polski</th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)">English</th>
     
 </tr>
 <tr>
@@ -165,34 +165,32 @@
 <tr>
     <td colspan="8" style="font-size:12">Levels: A1 / A2: Basic Level - B1 / B2: Intermediate - C1 / C2: Advanced</td>
 </tr>
+</table>
+<table>
 <tr><td styule="height:100px"><br></td></tr>
 
 <tr>
     <td class="Work" colspan="6" style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)"><b><img src="../images/list-check.png" alt="Skolas" style="width:20px;height:18px;"> Computer skills</b> </td>
 </tr>
 <tr>
-    <th>Programm</th>
-    <th>LVL</th>
-    <td></td>
-    <th>Software</th>
-    <th>LVL</th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)">Programm</th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)">LVL</th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)">Software</th>
+    <th style="text-align:center; border-bottom: 1px solid rgb(17, 14, 14)">LVL</th>
 </tr>
     <td>Photoshop</td>
     <td>Pro</td>
-    <td></td>
     <td>MS Windows</td>
     <td>Pro</td>
 </tr>
 <tr>
     <td>MS Office</td>
     <td>Expert</td>
-    <td></td>
     <td>MacOs</td>
     <td>Pro</td></tr>
 <tr>
     <td>Visual Studio</td>
     <td>Beginner</td>
-    <td></td>
     <td>Linux</td>
     <td>Pro</td>
 </tr>
