txt kļudas labojums

--- a/Class_08_20220608/index.html
+++ b/Class_08_20220608/index.html
@@ -7,7 +7,7 @@
     <h2>Treniņš ar mainīgajiem</h2>
 
     <p id="demo"></p>
-    Decimāls skaidtlis
+    Decimāls skaitlis
     <p id="dec"></p>
     Binārais skaitlis
     <p id="bin"></p> 
