8 un 9 stundas uzdevumi ar mainīgajiem

--- a/Class_08_20220608/index.html
+++ b/Class_08_20220608/index.html
@@ -2,16 +2,57 @@
 <html>
 <head>
 <title>Mainīgie</title>  
+
 </head>
-<body>    
+
+<link rel="stylesheet" href="./style.css">
+<center>
+<body>   
+  
+<div class="uzdevums1">
     <h2>Treniņš ar mainīgajiem</h2>
 
     Decimāls skaitlis
     <p id="dec"></p>
     Binārais skaitlis
     <p id="bin"></p> 
-    <script src="script.js"></script>
+</div>  
+   
+<hr>
 
+<div class="uzdevums2">   
+    <hr>
+    <h2>Uzdevums Divi</h2>
+    <p id="radiuss"></p>
+</div> 
+
+<hr>
+
+
+<div class="uzdevums2a">   
+    <hr>
+    <h2>Uzdevums 2a</h2>
+    Ja zemes patuvenais rādius ir  <input type="text" id="myText" value=" km "> 
+    <hr>
+    <button onclick="myFunction()">Tad ekvadora garums ir </button>
+    <hr>
+    <p id="ekvadors"></p>
+</div> 
+<hr>
+
+
+<div class="uzdevums3">   
+    <hr>
+    <h2>Uzdevums Divi</h2>
+    <p id="banka"></p>
+</div> 
+
+
+
+
+
+
+<script src="script.js"></script>
 
 </body>
 </html>
