Pabeidzu un bankas uzdevumu + style.css un js

--- a/Class_08_20220608/index.html
+++ b/Class_08_20220608/index.html
@@ -43,8 +43,15 @@
 
 <div class="uzdevums3">   
     <hr>
-    <h2>Uzdevums Divi</h2>
+    <h2 style="text-align:center" >Uzdevums Trīs</h2>
     <p id="banka"></p>
+    <p id="piedavajums"></p>
+    <p id="ieguvums1"></p>
+    <p id="ieguvums2"></p>
+    <p id="ieguvums3"></p>
+    <p id="ieguvums4"></p>
+    <p id="ieguvums5"></p>
+    <p id="thnx"></p>
 </div> 
 
 
