papildināju MD ar klienta ievadi/ css labojums

--- a/Class_10_20220615/Majasdarbs banka/index.html
+++ b/Class_10_20220615/Majasdarbs banka/index.html
@@ -22,13 +22,19 @@
     <p id="ieguvums5"></p>
     <p id="thnx"></p>
 </div> 
+
+
 <br>
+
+
 <div class="uzdevums4">   
     <hr>
     <h2 style="text-align:center" >Uzdevums Četri</h2>
     <p id="klients"></p>
     <p id="piedavajums2"></p>
-    <p id="thnx2"></p>
+    <p> Izvēlieties savu termiņu</p><input type="text" id="klientsInput" onkeyup="rekina()" ><br>
+<p id="thnx2"></p>
+
 </div> 
 <script src="script.js"></script>
 </body>
