--- a/Class_10_20220615/Majasdarbs banka/index.html
+++ b/Class_10_20220615/Majasdarbs banka/index.html
@@ -36,6 +36,19 @@
 <p id="thnx2"></p>
 
 </div> 
+
+<br>
+
+<div class="uzdevums5">   
+    <hr>
+    <h2 style="text-align:center" >Uzdevums Pieci</h2>
+    <p id="klients2"></p>
+    <p id="piedavajums3"></p>
+    
+<p id="procenti_1"></p>
+
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
